# nerfstudio-nerfimpa

./: pyproject.toml
nerfimpa/: nerfimpa_config.py
nerfimpa/field_components/: tuner_encoding.py
nerfimpa/fields/: custom_vanilla_field.py  siren_field.py  tuner_field.py
nerfimpa/models/: custom_vanilla_model.py  siren_model.py  tuner_model.py
nerfimpa/utils/: utils.py
