[project]
name = "nerfimpa"
description = "La li lu le lo"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"]

[tool.setuptools.packages.find]
include = ["nerfimpa*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
custom-vanilla-nerf = 'nerfimpa.nerfimpa_config:custom_vanilla_nerf'
siren-nerf = 'nerfimpa.nerfimpa_config:siren_nerf'
