[project]
name = "nerfimpa"
description = "La li lu le lo"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"]

[tool.setuptools.packages.find]
include = ["nerfimpa*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
custom-vanilla-nerf = 'nerfimpa.nerfimpa_config:custom_vanilla_nerf'
siren-nerf = 'nerfimpa.nerfimpa_config:siren_nerf'
siren-nerf-nope = 'nerfimpa.nerfimpa_config:siren_nerf_nope'
siren-nerf-w5 = 'nerfimpa.nerfimpa_config:siren_nerf_w5'
siren-nerf-w20 = 'nerfimpa.nerfimpa_config:siren_nerf_w20'
siren-nerf-sirencolor = 'nerfimpa.nerfimpa_config:siren_nerf_sirencolor'
siren-nerf-lr1em4 = 'nerfimpa.nerfimpa_config:siren_nerf_lr1em4'
siren-nerf-lw256 = 'nerfimpa.nerfimpa_config:siren_nerf_lw256'
siren-nerf-nl5 = 'nerfimpa.nerfimpa_config:siren_nerf_nl5'
siren-nerf-noclamp = 'nerfimpa.nerfimpa_config:siren_nerf_noclamp'
siren-nerf-baseline2 = 'nerfimpa.nerfimpa_config:siren_nerf_baseline2'

siren-nerf-no-w0 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0'
siren-nerf-no-w0-hidden5 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_hidden5'

tuner-encoding = 'nerfimpa.nerfimpa_config:tuner_encoding'

siren-nerf-no-w0-newinit4 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_newinit4'
siren-nerf-no-w0-newinit5 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_newinit5'
siren-nerf-no-w0-newinit6 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_newinit6'
siren-nerf-no-w0-newinit7 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_newinit7'
siren-nerf-no-w0-newinit8 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_newinit8'

siren-nerf-no-w0-numlayers5 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_numlayers5'
siren-nerf-no-w0-numlayers6 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_numlayers6'
siren-nerf-no-w0-numlayers7 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_numlayers7'
siren-nerf-no-w0-numlayers8 = 'nerfimpa.nerfimpa_config:siren_nerf_no_w0_numlayers8'
